// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YearMonthPicker only with required props renders successfully: YearMonthPicker only with required props. 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingHorizontal": 10,
    }
  }
  testID="pickerItemsContainer"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      rejectResponderTermination={true}
      testID="yearTextInput"
      underlineColorAndroid="transparent"
      value="2022"
    />
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "color": "transparent",
          "height": "100%",
          "opacity": 0,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <RNCPicker
        items={
          Array [
            Object {
              "label": "2017",
              "testID": undefined,
              "textColor": undefined,
              "value": 2017,
            },
            Object {
              "label": "2018",
              "testID": undefined,
              "textColor": undefined,
              "value": 2018,
            },
            Object {
              "label": "2019",
              "testID": undefined,
              "textColor": undefined,
              "value": 2019,
            },
            Object {
              "label": "2020",
              "testID": undefined,
              "textColor": undefined,
              "value": 2020,
            },
            Object {
              "label": "2021",
              "testID": undefined,
              "textColor": undefined,
              "value": 2021,
            },
            Object {
              "label": "2022",
              "testID": undefined,
              "textColor": undefined,
              "value": 2022,
            },
          ]
        }
        numberOfLines={1}
        onChange={[Function]}
        selectedIndex={5}
        style={
          Array [
            Object {
              "height": 216,
            },
            undefined,
          ]
        }
        testID="yearPicker"
      />
    </View>
  </View>
  <Text />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      rejectResponderTermination={true}
      testID="monthTextInput"
      underlineColorAndroid="transparent"
      value="4"
    />
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "color": "transparent",
          "height": "100%",
          "opacity": 0,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <RNCPicker
        items={
          Array [
            Object {
              "label": "1",
              "testID": undefined,
              "textColor": undefined,
              "value": 1,
            },
            Object {
              "label": "2",
              "testID": undefined,
              "textColor": undefined,
              "value": 2,
            },
            Object {
              "label": "3",
              "testID": undefined,
              "textColor": undefined,
              "value": 3,
            },
            Object {
              "label": "4",
              "testID": undefined,
              "textColor": undefined,
              "value": 4,
            },
          ]
        }
        numberOfLines={1}
        onChange={[Function]}
        selectedIndex={3}
        style={
          Array [
            Object {
              "height": 216,
            },
            undefined,
          ]
        }
        testID="monthPicker"
      />
    </View>
  </View>
  <Text />
</View>
`;

exports[`YearMonthPicker with all props should be applied all properly: YearMonthPicker all properly. 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingHorizontal": 10,
    }
  }
  testID="pickerItemsContainer"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      placeholder="please select..."
      rejectResponderTermination={true}
      style={
        Object {
          "color": "red",
        }
      }
      testID="yearTextInput"
      underlineColorAndroid="transparent"
      value="2022"
    />
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "color": "transparent",
          "height": "100%",
          "opacity": 0,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <RNCPicker
        items={
          Array [
            Object {
              "label": "please select...",
              "testID": undefined,
              "textColor": undefined,
              "value": undefined,
            },
            Object {
              "label": "2017",
              "testID": undefined,
              "textColor": 4294967040,
              "value": 2017,
            },
            Object {
              "label": "2018",
              "testID": undefined,
              "textColor": 4294967040,
              "value": 2018,
            },
            Object {
              "label": "2019",
              "testID": undefined,
              "textColor": 4294967040,
              "value": 2019,
            },
            Object {
              "label": "2020",
              "testID": undefined,
              "textColor": 4294967040,
              "value": 2020,
            },
            Object {
              "label": "2021",
              "testID": undefined,
              "textColor": 4294967040,
              "value": 2021,
            },
            Object {
              "label": "2022",
              "testID": undefined,
              "textColor": 4294967040,
              "value": 2022,
            },
          ]
        }
        numberOfLines={5}
        onChange={[Function]}
        selectedIndex={6}
        style={
          Array [
            Object {
              "height": 216,
            },
            undefined,
          ]
        }
        testID="yearPicker"
      />
    </View>
  </View>
  <Text>
    年
  </Text>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      placeholder="please select..."
      rejectResponderTermination={true}
      style={
        Object {
          "color": "red",
        }
      }
      testID="monthTextInput"
      underlineColorAndroid="transparent"
      value="4"
    />
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "color": "transparent",
          "height": "100%",
          "opacity": 0,
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <RNCPicker
        items={
          Array [
            Object {
              "label": "please select...",
              "testID": undefined,
              "textColor": undefined,
              "value": undefined,
            },
            Object {
              "label": "1",
              "testID": undefined,
              "textColor": 4294967040,
              "value": 1,
            },
            Object {
              "label": "2",
              "testID": undefined,
              "textColor": 4294967040,
              "value": 2,
            },
            Object {
              "label": "3",
              "testID": undefined,
              "textColor": 4294967040,
              "value": 3,
            },
            Object {
              "label": "4",
              "testID": undefined,
              "textColor": 4294967040,
              "value": 4,
            },
          ]
        }
        numberOfLines={5}
        onChange={[Function]}
        selectedIndex={4}
        style={
          Array [
            Object {
              "height": 216,
            },
            undefined,
          ]
        }
        testID="monthPicker"
      />
    </View>
  </View>
  <Text>
    月
  </Text>
</View>
`;
